# tailored

./: CMakeLists.txt  README.md  TODO.md  makefile
res/scenes/: scene_3.gltf
res/shaders/: depth_shader.fs  depth_shader.vs  fire_particle_shader.fs  fire_particle_shader.vs  font_shader.fs  font_shader.vs  line_shader.fs  line_shader.vs  model_depth_shader.vs  model_shader.fs  motion_blur_shader.fs  motion_blur_shader.vs  shader.fs  shader.vs  sprite_shader.fs  sprite_shader.vs  text_sdf.fs  ui_sprite_shader.fs
res/temp/: characters.json  items.json
saves/: 00-13-02.tsf  00-13-03.tsf  00-13-05.tsf  00-13-07.tsf  11-06-01.tsf  11-06-04.tsf  11-06-07.tsf  11-18-44.tsf  11-41-03.tsf  11-43-08.tsf  11-57-12.tsf  12-18-42.tsf  12-18-44.tsf  13-16-52.tsf  14-59-44.tsf  15-17-02.tsf  15-17-03.tsf  15-25-05.tsf  15-27-56.tsf  15-37-41.tsf  16-46-06.tsf  17-29-45.tsf  17-29-47.tsf  17-48-43.tsf  22-53-41.tsf  save_file.ass  save_files_data.tsfs
src/: cJSON.c  cJSON.h  fire_particles.c  fire_particles.h  game.h  game_screen.c  glad.c  main.c  pathfinding.c  screens.h  setup_screen.c  splash_screen.c  t_core.c  t_core.h  t_engine.c  t_engine.h  t_font.c  t_font.h  t_input.c  t_list.c  t_list.h  t_models.c  t_models.h  t_shapes.c  t_shapes.h  t_sprite.c  t_sprite.h  t_ui.c  t_ui.h  tailored.c  tailored.h  title_screen.c  ufbx.c
src/engine/: glad.c  t_array.c  t_array.h  t_core.c  t_core.h  t_easings.c  t_easings.h  t_engine.c  t_files.c  t_files.h  t_font.c  t_font.h  t_input.c  t_input.h  t_list.c  t_list.h  t_logging.c  t_logging.h  t_math.c  t_math.h  t_models.c  t_ui.c  (+9 more)
(+10 files in other folders)
